--- a/www/index.html
+++ b/www/index.html
@@ -7,10 +7,13 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/ion-gallery.css">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="cordova.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/states.js"></script>
+    <script src="js/ion-gallery.js"></script>
   </head>
 
   <body ng-app="starter">
