--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
     <script src="js/ion-gallery.js"></script>
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="starter" ng-controller="DataCtrl">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
